# MCPer

./: .gitignore  README.md  agents.md  api.py  main.py  pyproject.toml  requirements.txt  ui_implementation_guide.md
app/: database.py
app/analyze/: __init__.py  parser.py
app/generate/: __init__.py  codegen.py
app/ingest/: __init__.py  loader.py
app/runtime/: __init__.py  runner.py
frontend/: package-lock.json  package.json
frontend/prisma/: schema.prisma  seed.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/auth/login/: route.ts
frontend/src/app/api/auth/me/: route.ts
frontend/src/app/api/auth/register/: route.ts
frontend/src/app/api/dashboard/: route.ts
frontend/src/app/api/predefined_apis/: route.ts
frontend/src/app/api/templates/: route.ts
frontend/src/app/api/verify/: route.ts
frontend/src/app/auth/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/components/: ApiEntryCard.tsx  AuthGuard.tsx  BuildProgress.tsx  FeatureCard.tsx  ResultPanel.tsx  ServerCodeViewer.tsx
frontend/src/types/: index.ts
templates/: env.j2  env_example.j2  server.py.j2  tool.py.j2
